--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Comedias-tomo-2-de-3-Las-Avispas-la-Paz-las-Aves-Lisistrata_69799
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69799-h/images/cover.jpg
 creator:
   author:
     agent_name: Aristophanes
@@ -14,6 +17,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/965
     wikipedia: https://en.wikipedia.org/wiki/Aristophanes
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69799#Comedias-tomo-2-de-3-Las-Avispas-la-Paz-las-Aves-Lisistrata
 gutenberg_issued: '2023-01-14'
 identifiers:
   gutenberg: '69799'
